# react-native-sodium

./: .gitignore  LICENSE  README.md  build.sh  index.d.ts  index.js  libsodium-1.0.11.tar.gz.sig  libsodium-1.0.13.tar.gz.sig  libsodium-1.0.17.tar.gz.sha512sum  libsodium-1.0.17.tar.gz.sig  package.json  precompiled.tgz  react-native-sodium.podspec  trusted.gpg
Example/: Example.js  package.json
Example/android/: build.gradle  settings.gradle
Example/android/app/: build.gradle
Example/android/app/src/main/java/com/example/: MainApplication.java
Example/ios/Example.xcodeproj/: project.pbxproj
android/: CMakeLists.txt  build.gradle
android/src/androidTest/java/org/libsodium/rn/: ExampleInstrumentedTest.java
android/src/main/cpp/: sodium-jni.c
android/src/main/java/org/libsodium/jni/: Sodium.java  SodiumJNI.java
android/src/main/java/org/libsodium/rn/: RCTSodiumModule.java  RCTSodiumPackage.java
android/src/test/java/org/libsodium/rn/: ExampleUnitTest.java
ios/RCTSodium/: RCTSodium.h  RCTSodium.m
